--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.11.0",
+    "@ionic-native/facebook": "^4.12.0",
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.12",
+    "cordova-plugin-facebook4": "^2.3.0",
     "cordova-sqlite-storage": "^2.4.0",
     "firebase": "^5.4.1",
     "ionic-angular": "3.9.2",
@@ -42,7 +44,11 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "220663918801990",
+        "APP_NAME": "msn mobile"
+      }
     }
   }
 }
