--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.12",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-facebook4": "^2.3.0",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.1.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.4.0",
     "firebase": "^5.4.1",
     "ionic-angular": "3.9.2",
@@ -48,7 +54,15 @@
       "cordova-plugin-facebook4": {
         "APP_ID": "220663918801990",
         "APP_NAME": "msn mobile"
-      }
-    }
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
