--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-facebook4": {
         "APP_ID": "220663918801990",
-        "APP_NAME": "msn mobile"
+        "APP_NAME": "msn mobile",
+        "ANDROID_SDK_VERSION": "4.+"
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
